@@ -5,7 +5,12 @@ import com.simibubi.create.foundation.block.IBE;
 import net.createmod.catnip.data.Iterate;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
+import net.minecraft.core.component.DataComponents;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.ListTag;
+import net.minecraft.nbt.Tag;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.component.CustomData;
 import net.minecraft.world.item.context.BlockPlaceContext;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.LevelAccessor;
@@ -19,8 +24,7 @@ import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 import org.jetbrains.annotations.NotNull;
 
 import javax.annotation.ParametersAreNonnullByDefault;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 @ParametersAreNonnullByDefault
 public abstract class AbstractCrateBlock extends CrateBlock {
@@ -77,12 +81,7 @@ public abstract class AbstractCrateBlock extends CrateBlock {
     }
 
     public void onMerge(AbstractCrateEntity be, AbstractCrateEntity other){
-        for (int slot = 0; slot < other.inventory.getSlots()/2; slot++) {
-            be.inventory.insertItem(slot + be.invSize/2, other.inventory.getStackInSlot(slot), false);
-            other.inventory.extractItem(slot, other.inventory.getStackInSlot(slot).getCount(), false);
-        }
         be.allowedAmount += other.allowedAmount;
-        //other.invHandler.invalidate();
     }
 
 
@@ -128,11 +127,28 @@ public abstract class AbstractCrateBlock extends CrateBlock {
     public @NotNull List<ItemStack> getDrops(BlockState blockState, LootParams.Builder builder) {
         BlockEntity blockentity = builder.getOptionalParameter(LootContextParams.BLOCK_ENTITY);
         if (blockentity instanceof AbstractCrateEntity abstractCrateEntity) {
-            abstractCrateEntity.onSplit();
             ItemStack itemstack = new ItemStack(blockState.getBlock());
             if (abstractCrateEntity.getLevel() != null) {
                 abstractCrateEntity.saveToItem(itemstack, abstractCrateEntity.getLevel().registryAccess());
-                return Collections.singletonList(itemstack);
+                CompoundTag copiedComp = Objects.requireNonNull(itemstack.get(DataComponents.BLOCK_ENTITY_DATA)).copyTag();
+                Tag crate_inv = copiedComp.getCompound("Inventory").get("Items");
+                if (crate_inv instanceof ListTag && !((ListTag) crate_inv).isEmpty()) {
+                    List<ItemStack> dropList = new ArrayList<>(List.of());
+                    Iterator<Tag> iterator = ((ListTag) crate_inv).iterator();
+                    while (iterator.hasNext()){
+                        ItemStack stack = ItemStack.parseOptional(abstractCrateEntity.getLevel().registryAccess(), (CompoundTag) iterator.next());
+                        if (stack.get(DataComponents.BLOCK_ENTITY_DATA) != null ||
+                                stack.get(DataComponents.CONTAINER) != null) {
+                            dropList.add(stack);
+                            iterator.remove();
+                        }
+                    }
+                    copiedComp.getCompound("Inventory").put("Items", crate_inv);
+                    copiedComp.putInt("AllowedAmount", Math.min(1024, copiedComp.getInt("AllowedAmount")));
+                    itemstack.set(DataComponents.BLOCK_ENTITY_DATA, CustomData.of(copiedComp));
+                    dropList.add(itemstack);
+                    return dropList;
+                }
             }
         }
         return super.getDrops(blockState, builder);
